	  * Display now shows the wait message while searching for tags in stored memory
	  * ButtLoad now gives dummy responses to STK500-only parameter GET/SET commands, which the latest AVRStudio seems to like to send for some reason
	  * Turned off the USART U2X bit as it was not needed and reduced the reliability of the serial connection

	IN PUBLIC RELEASE 1.3:
	=======================================
	  * PROGRAMMING DONE/FAIL messaged display code altered for smaller codesize
	  * Fixed EEPROM poll bug - now uses wait poll if last byte in page is the same as the poll value
	  * USI Timer0 compare match routine rewritten in optimised ASM for speed, increased USI max speed value
	  * USI Speed/Compare Value table reordered and blank EEPROM check removed for code size (due to table reorder code still defaults to fastest setting if the EEPROM is blank)
	  * Removed the WriteCollision flag from the USI driver, since the routine waits for completion before exiting anyway
	  * Re-added main menu option for storage info (accidentally removed in 1.2)
	  * Changed dataflash erase (external) method to the faster block erase, slow erase now performed after computer reply to prevent a timeout
	  * Fixed typo in CMD_READ_OSCCAL_ISP section of the ProgramManager.c packet interpretation routine
	  * External dataflash total pages table corrected
	  * Dataflash access speed increased to 4MHz (up from ~150KHz)
	  * System clock is now prescaled down to 1MHz inside the main menu to save power
	  * Removed unnessesary CopyFlashToBuffer command in ProgramManager.c
	  * Added code to exit OSCCAL faster if a value within the tollerace cannot be found (closest value used)

	IN PUBLIC RELEASE 1.2:
	=======================================
	  * PROGRAMMING DONE and PROGRAMMING FAIL messages are now shown for a longer time so they can be fully read
	  * DATAFLASH ERROR now also shown in PRGM DATAFLASH MODE if no attached dataflash is found