@@ -8,7 +8,7 @@
 #ifndef MAIN_H
 #define MAIN_H
 	// DEBUG SWITCH
-	//#define DEBUG
+//	#define DEBUG
 	// END DEBUG SWITCH
 	
 	// INCLUDES:
