@@ -46,6 +46,8 @@ BUG      - Serial connection instability
 	  * Display now shows the wait message while searching for tags in stored memory
 	  * ButtLoad now gives dummy responses to STK500-only parameter GET/SET commands, which the latest AVRStudio seems to like to send for some reason
 	  * Turned off the USART U2X bit as it was not needed and reduced the reliability of the serial connection
+	  * TagManager now uses a single uint32_t variable to decrease code size and tag scanning time
+	  * Size and speed over portability chosen for the loading of CurrAddress from the new address in the V2P_RunStateMachine recieved packet
 
 	IN PUBLIC RELEASE 1.3:
 	=======================================
